1. changes authority code convension. 2. changes trades view -> changes style card to table